--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,16 @@ ext.globalCfg = [
         minSdkVersion: 19,
         compileSdkVersion: 23,
         buildToolsVersion: "29.0.2",
-        publishedVersion: "0.1.0",
-        publishedGroupId: 'com.wristcoin',
+        publishVersion: "0.1.0",
+        publishGroupId: 'com.mywristcoin',
 ]
 
 ext.libraries = [
         androidSupportAnnotations: "com.android.support:support-annotations:23.1.1",
         tcmpCommandFamilyCommon: "com.taptrack.tcmptappy2:tcmp:2.0.0",
         junit: 'junit:junit:4.12',
+]
+
+ext.scripts = [
+        publishMavenCentralScript: rootProject.file("scripts/publish-mavencentral.gradle")
 ]
