--- a/scripts/publish-mavencentral.gradle
+++ b/scripts/publish-mavencentral.gradle
@@ -36,7 +36,7 @@ version = publishVersion
 ext.signing = [
         "keyId": "",
         "password": "",
-        "secretKeyringFile": "",
+        "secretKeyRingFile": "",
 ]
 
 ext.ossrhUsername = ""
