--- a/commandfamily-wristcoinpos/build.gradle
+++ b/commandfamily-wristcoinpos/build.gradle
@@ -12,6 +12,7 @@ android {
 
 dependencies {
     api libraries.tcmpCommandFamilyCommon
+    api libraries.kotlinTlv
     api libraries.androidSupportAnnotations
     testImplementation libraries.junit
     implementation "androidx.core:core-ktx:1.3.2"
